src/test/ui/associated-types/associated-types-subtyping-1.stderr
error[E0623]: lifetime mismatch
  --> $DIR/associated-types-subtyping-1.rs:26:38
   |
LL | fn method2<'a,'b,T>(x: &'a T, y: &'b T)
   |                        -----     ----- these two types are declared with different lifetimes...
...
LL |     let _c: <T as Trait<'b>>::Type = a;
   |                                      ^ ...but data from `y` flows into `x` here

error[E0623]: lifetime mismatch
  --> $DIR/associated-types-subtyping-1.rs:35:38
   |
LL | fn method3<'a,'b,T>(x: &'a T, y: &'b T)
   |                        -----     ----- these two types are declared with different lifetimes...
...
LL |     let _c: <T as Trait<'a>>::Type = b;
   |                                      ^ ...but data from `y` flows into `x` here

error: aborting due to 2 previous errors

